# Ogivator

./: README.md  index.html  pyproject.toml  requirements.txt
src/Ogivator/: Ogivator.py
